<resources>
    <string name="app_name">Gutib Junas Nazarito Final Project</string>
    <string name="welcome_to_the_homepage">Welcome to the Homepage</string>
    <string name="add_reflection">Add Reflection</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="track_progress">Track Progress</string>
    <string name="categorize_reflection">Categorize Reflection</string>
    <string name="exit">Exit</string>
    <string name="add_your_reflection_here">Add your reflection here</string>
    <string name="reflection_label">Reflection</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="mood_label">Mood</string>
    <string name="Mood">Mood or Title</string>
    <string name="set_reminder_for_daily_mindfulness">Set Reminder for Daily Mindfulness</string>
    <string name="set_date">Set Date</string>
    <string name="set_a_time">Set a Time</string>
    <string name="setDate">Set Date</string>
    <string name="setTime">Set Time</string>
    <string name="categorize_your_reflection_here">Categorize Your Reflection Here</string>
    <string name="mood">Enter Your Mood</string>
    <string name="reflection">Enter your Reflection</string>
    <string name="enter_mood_that_you_want_to_search">Enter Mood that you want to Search</string>
    <string name="see_your_daily_progress_here">See Your Daily Progress Here</string>
    <string name="enter_title_or_mood">Enter Title or Mood</string>
    <string name="enter_mood_or_title">Enter Mood or Title</string>
    <string name="add_journal">Add Journal or Reflection</string>

    <style name="Inter" parent="TextAppearance.AppCompat.Button">
        <item name="fontFamily">Inter</item>
    </style>

</resources>