<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetReminderForDailyMind">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textAlignment="center"
        android:text="@string/set_reminder_for_daily_mindfulness" style="@style/Inter"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="140dp">

        <Button
            android:id="@+id/setDate"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:textStyle="bold"
            style="@style/Inter"
            android:layout_gravity="center"
            android:text="@string/set_date"
            android:drawableStart="@drawable/date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setDate"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/setTime"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:textStyle="bold"
            style="@style/Inter"
            android:layout_gravity="center"
            android:layout_marginTop="40sp"
            android:text="@string/set_a_time"
            android:drawableStart="@drawable/time"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/setTime"
            android:layout_gravity="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/Submit"
        android:background="@drawable/rounded_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/back"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        style="@style/Inter"/>

    <Button
        android:id="@+id/back"
        android:background="@drawable/rounded_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:text="@string/back"
        style="@style/Inter"/>


</RelativeLayout>