<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddReflection">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textAlignment="center"
        android:text="@string/add_your_reflection_here" style="@style/Inter"
        android:textAllCaps="false"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:layout_marginTop="140dp"
            android:hint="@string/mood"
            android:textSize="25sp"
            android:layout_gravity="center"
            style="@style/Inter"
            android:autofillHints=""
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Mood"
            android:layout_gravity="center"
            style="@style/Inter"
            android:textAllCaps="false"/>

        <EditText
            android:layout_width="330dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:hint="@string/reflection"
            android:textSize="25sp"
            android:autofillHints=""
            android:inputType="text" />

        <TextView
            style="@style/Inter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:autofillHints=""
            android:inputType="text"
            android:text="@string/reflection"
            tools:ignore="TextViewEdits,TouchTargetSizeCheck" />
    </LinearLayout>

    <Button
        android:id="@+id/Submit"
        android:background="@drawable/rounded_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/back"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:text="@string/submit"
        style="@style/Inter"/>

    <Button
        android:id="@+id/back"
        android:background="@drawable/rounded_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:text="@string/back"
        style="@style/Inter"/>

</RelativeLayout>
